[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel_migrations = { version = "2.1.0", features = ["mysql"] }
tokio = { version = "1.36.0", features = ["full"] }
warp = "0.3.6"
