[package]
name = "stock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.5", features = ["mysql", "r2d2"] }
tokio = { version = "1.37.0", features = ["full"] }
warp = "0.3.6"
